--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
+    "@react-native-async-storage/async-storage": "^1.17.10",
+    "@react-navigation/material-bottom-tabs": "^6.2.4",
     "@react-navigation/material-top-tabs": "^6.2.4",
     "@react-navigation/native-stack": "^6.9.0",
     "@reduxjs/toolkit": "^1.8.5",
@@ -21,18 +23,19 @@
     "axios": "^0.27.2",
     "expo": "^46.0.13",
     "expo-location": "~14.3.0",
+    "expo-updates": "~0.14.6",
     "lottie-react-native": "5.1.3",
     "react": "18.0.0",
     "react-native": "0.69.6",
     "react-native-animated-loader": "^1.0.0",
+    "react-native-paper": "^4.12.4",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-svg": "12.3.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "^9.2.0",
-    "react-redux": "^8.0.4",
-    "expo-updates": "~0.14.6"
+    "react-redux": "^8.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
